--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,27 @@
+@import "reset.css";
+@import "svg.css";
+@import "status-bar.css";
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.status-bar {
+.welcome-header {
+  margin: 90px 0px;
+  text-align: center;
   display: flex;
-  justify-content: center;
-}
-
-.status-bar__column {
-  width: 33%;
-}
-
-.status-bar__column:first-child span {
-  margin-right: 5px;
-}
-
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
-}
-
-.status-bar__column:last-child {
-  display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
   align-items: center;
 }
 
-.status-bar__column object[data="icons/wifi.svg"] {
-  margin: 0px 5px;
-  height: 15px;
+.welcome-header__title {
+  margin-bottom: 20px;
+  font-size: 25px;
 }
 
-.status-bar__column object[data="icons/batteryIcon.svg"] {
-  margin: 0px 5px;
-  height: 16px;
-}
-
-.status-bar__column object[data="icons/bolt.svg"] {
-  height: 16px;
+.welcome-header__text {
+  width: 60%;
+  opacity: 0.7;
+  font-weight: 300;
 }
