--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import "reset.css";
 @import "svg.css";
 @import "status-bar.css";
+@import "variables.css";
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -24,4 +25,27 @@ body {
   width: 60%;
   opacity: 0.7;
   font-weight: 300;
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 30px;
+}
+
+#login-form input::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+#login-form input {
+  border: none;
+  padding: 15px 0px;
+  font-size: 19px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 25px;
+  transition: border-color 0.3s ease-in-out;
+}
+
+#login-form input:focus {
+  border-color: var(--yellow);
 }
