--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,25 @@
 @import "reset.css";
-@import "components/svg.css";
 @import "components/status-bar.css";
 @import "variables.css";
 @import "screens/login.css";
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.footer-box {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(228, 228, 228);
+  padding: 20px 40px;
+  position: fixed;
+  box-sizing: border-box;
+  bottom: 0;
+  width: 100%;
+
+  border-top: 1px solid rgb(200, 200, 200);
+}
+
+.footer-box__column object {
+  height: 25px;
 }
