--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,13 @@ body {
   bottom: 16px;
   left: 15px;
 }
+
+.reddot {
+  height: 5px;
+  width: 5px;
+  border-radius: 50%;
+  background-color: tomato;
+  position: absolute;
+  left: 25px;
+  bottom: 25px;
+}
