--- a/css/style.css
+++ b/css/style.css
@@ -2,32 +2,14 @@
 @import "components/status-bar.css";
 @import "variables.css";
 @import "screens/login.css";
+
+/* componentx*/
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/friends.css";
+@import "components/user-component.css";
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-#friends-display-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fafafa;
-  padding: 15px 0px;
-  font-size: 16px;
-  color: rgb(35, 35, 35);
-}
-
-#friends-display-link object {
-  height: 16px;
-}
-
-#friends-display-link span {
-  margin: 0px 7px 0px 5px;
-}
-
-#friends-display-link svg {
-  color: #a0a0a0;
 }
