--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,18 @@
 @import "components/screen-header.css";
 @import "components/friends.css";
 @import "components/user-component.css";
+@import "components/badge.css";
+@import "components/chat.css";
+@import "components/nav-find.css";
+@import "components/recommended-friends.css";
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.screen-header__icons .reddot {
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
 }
