--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -5,7 +5,7 @@
   padding: 20px 40px;
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 486px;
   box-sizing: border-box;
   border-top: 1px solid rgb(200, 200, 200);
 }
