--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "components/status-bar.css";
 @import "variables.css";
 @import "screens/login.css";
+@import "screens/settings.css";
 
 /* componentx*/
 @import "components/nav-bar.css";
