--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px var(--horizontal-space);
+  padding: 60px var(--horizontal-space) 20px var(--horizontal-space);
 }
 
 .screen-header__title {
