--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,6 +2,10 @@
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  position: fixed;
+  width: 486px;
+  box-sizing: border-box;
+  z-index: 2;
 }
 
 .status-bar__column {
