--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import "reset.css";
-@import "components/status-bar.css";
+
 @import "variables.css";
 @import "screens/login.css";
 @import "screens/settings.css";
+@import "screens/chats.css";
 
 /* componentx*/
+@import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/friends.css";
@@ -21,7 +23,6 @@ html {
   background-color: black;
   display: flex;
   justify-content: center;
-  height: 800;
 }
 
 body {
