--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,15 @@
 
 @import "variables.css";
 @import "screens/login.css";
-@import "screens/settings.css";
+@import "screens/friends.css";
 @import "screens/chats.css";
+@import "screens/settings.css";
 
 /* componentx*/
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
-@import "components/friends.css";
+
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/chat.css";
