--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
-
+@import "components/splash-screen.css";
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/chat.css";
