--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,9 +18,39 @@
   position: relative;
 }
 
+@keyframes appearBunAnimation {
+  0% {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  40% {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .nav__link {
   position: relative;
   display: block;
+}
+
+.footer-box__column:nth-child(1) {
+  animation: appearBunAnimation 1.2s ease-in-out;
+}
+
+.footer-box__column:nth-child(2) {
+  animation: appearBunAnimation 1.2s ease-in-out 0.2s;
+}
+
+.footer-box__column:nth-child(3) {
+  animation: appearBunAnimation 1.2s ease-in-out 0.4s;
+}
+
+.footer-box__column:nth-child(4) {
+  animation: appearBunAnimation 1.2s ease-in-out 0.6s;
 }
 
 .nav__link > .reddot {
@@ -43,7 +73,7 @@
 
 .new-massage {
   position: absolute;
-  bottom: 16px;
-  left: 15px;
+  bottom: 14px;
+  left: 14px;
   animation: notificationAnimation 2s ease-in-out infinite;
 }
