--- a/css/components/open-chat.css
+++ b/css/components/open-chat.css
@@ -93,3 +93,23 @@
 .open-chat__list__item__like span {
   margin-left: 4px;
 }
+
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.open-chat__list__item__like .fa-heart:hover {
+  will-change: transform;
+  animation: heartBeat 2s ease-in-out infinite;
+}
