--- a/css/screens/chats.css
+++ b/css/screens/chats.css
@@ -3,12 +3,24 @@
   height: 200vh;
 }
 
+@keyframes fadein {
+  from {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
 .main-chat {
   margin-top: 104px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0 var(--horizontal-space);
+  animation: fadein 0.5s ease-in;
 }
 .chat-header {
   background-color: #abc1d1;
@@ -81,16 +93,24 @@
   font-size: 20px;
 }
 
-.reply {
+.reply__container {
   position: fixed;
   bottom: 0;
   width: 486px;
   background-color: white;
+
+  box-sizing: border-box;
+}
+
+.reply {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 5px 25px;
-  box-sizing: border-box;
+}
+
+.keypad img {
+  width: 486px;
 }
 
 .replay__column:first-child {
