--- a/css/screens/chats.css
+++ b/css/screens/chats.css
@@ -95,18 +95,19 @@
 
 .reply__container {
   position: fixed;
-  bottom: 0;
+  bottom: -280px;
   width: 486px;
   background-color: white;
 
   box-sizing: border-box;
+  transition: all 0.8s ease-in-out;
 }
 
 .reply {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 25px;
+  margin: 5px 25px;
 }
 
 .keypad img {
@@ -126,10 +127,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  transition: all 0.5s ease-in-out;
 }
 
 .reply__column input {
   border: none;
+  width: 100%;
   background-color: transparent;
   margin: 10px;
   font-size: 16px;
@@ -158,4 +161,29 @@
   color: var(--yellow);
   background-color: black;
   border-radius: 50%;
+}
+
+.reply .reply__column,
+.reply svg {
+  transition: opacity 1s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within svg {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.reply:focus-within {
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+.reply:focus-within .reply__column:last-child {
+  width: 95vw;
+  transform: translateX(-4%);
+}
+
+.reply__container:focus-within {
+  transform: translateY(-280px);
 }
